--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@preline/dropdown": "^2.1.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "animate.css": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
     "scrollreveal": "^4.0.9"
