--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@preline/dropdown": "^2.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "animate.css": "^4.1.1",
+    "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
